@@ -62,7 +62,8 @@ english:
   block [([<args>])] [returning <english>]
   <store>* <modifier>* [<C-type>]
 args: a comma separated list of [<name> as] <english>
-C-type: bool | char[{8|16|32}_t] | wchar_t | int | float | double | void
+C-type: _BitInt(<int>) | bool | char[{8|16|32}_t] | wchar_t | int | float |
+        double | void
 cv-qual: _Atomic | const | restrict | volatile
 modifier: short | long | signed | unsigned | <cv-qual>
 name: a C identifier
