@@ -12,6 +12,9 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 13.1
 
+** `_BitInt(<int>)` help
+`_BitInt(<int>)` was added to the help text.
+
 ** More English synonyms
 The following English synonyms have been added:
 
